[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ground_shaker_asset/Blue/Weapons/turret_01_mk1.png" type="Texture" id=1]
[ext_resource path="res://weapons/Turret.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 7 ]
}

[node name="Turret" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 8

[node name="EndOfBarrel" type="Position2D" parent="."]
position = Vector2( 49, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 53, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fire = SubResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true
